--- a/template.html
+++ b/template.html
@@ -13,7 +13,7 @@
 
             <div class="page-header">
                 <h1>IMAP CAPABILITY</h1>
-                <p class="lead">Information about CAPABILITY info for well known IMAP services.</p>
+                <p class="lead">Information about CAPABILITY for well known IMAP services.</p>
             </div>
 
             <% if(processed){ %>
@@ -30,7 +30,7 @@
                     <ul class="nav nav-tabs">
                         <li class="active"><a href="#capa_<%= i %>_capa" data-toggle="tab">Capabilities</a></li>
                         <li><a href="#capa_<%= i %>conf" data-toggle="tab">Host config</a></li>
-                        <li><a href="#capa_<%= i %>_trans" data-toggle="tab">IMAP transaction</a></li>
+                        <li><a href="#capa_<%= i %>_trans" data-toggle="tab">IMAP log</a></li>
                     </ul>
 
                     <!-- Tab panes -->
